Fix alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -151,8 +151,8 @@
   &::before {
     content: attr(data-language);
     position: absolute;
+    top: 0.5rem;
     left: 0.5rem;
-    right: 0.5rem;
     padding: 0em 0.5em;
     border-radius: var(--border-radius);
     color: var(--text-color);
